samples/_failures_safe/1761164195_cedd86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_596e75df.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_596e75df.c:147:32: error: expected ‘]’ at end of input
  147 |         token.value[value_index
      |                                ^
      |                                ]
./samples/SAFE/__tmp_596e75df.c:147:9: error: expected declaration or statement at end of input
  147 |         token.value[value_index
      |         ^~~~~
./samples/SAFE/__tmp_596e75df.c:147:9: error: expected declaration or statement at end of input
